--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *.tex linguist-detectable=false
 *.lua linguist-detectable=false
+*.html linguist-detectable=false
 *.qmd linguist-language=R
 *.tex linguist-language=R
 *.js linguist-vendored
